<resources>
    <string name="app_name">HireIn</string>
    <string name="recruiter_role">Recruiter Role</string>
    <string name="location">Location</string>
    <string name="experience">Experience</string>
    <string name="education">Education</string>
    <string name="salary">salary</string>
    <string name="jobDescription">
        Another feature in the developer options helps you identify overdraw by color-coding your UI.
        Overdraw occurs when your app draws the same pixel more than once within the same frame.
        So this visualization shows where your app might be doing more rendering work than necessary,
        which can be a performance problem due to extra GPU effort to render pixels that won’t be visible to the user.
        GPU overdraw problem can occur because of the nesting of layout, so we need to solve that problem by reducing the nesting level.
        Following are the steps to enable GPU overdraw in your device.
    On your device, go to Settings and tap Developer Options.
         Another feature in the developer options helps you identify overdraw by color-coding your UI.
        Overdraw occurs when your app draws the same pixel more than once within the same frame.
        So this visualization shows where your app might be doing more rendering work than necessary,
        which can be a performance problem due to extra GPU effort to render pixels that won’t be visible to the user.
        GPU overdraw problem can occur because of the nesting of layout, so we need to solve that problem by reducing the nesting level.
        Following are the steps to enable GPU overdraw in your device.
    On your device, go to Settings and tap Developer Options.
         Another feature in the developer options helps you identify overdraw by color-coding your UI.
        Overdraw occurs when your app draws the same pixel more than once within the same frame.
        So this visualization shows where your app might be doing more rendering work than necessary,
        which can be a performance problem due to extra GPU effort to render pixels that won’t be visible to the user.
        GPU overdraw problem can occur because of the nesting of layout, so we need to solve that problem by reducing the nesting level.
        Following are the steps to enable GPU overdraw in your device.
    On your device, go to Settings and tap Developer Options
    </string>
    <string name="job_title">Job Title</string>
    <string name="jobpostowner_image">JobPostOwner Image</string>
    <string name="jobRequirements"> Now suppose we live in a perfect world where an owner can have multiple dogs, and that a dog can have multiple owners. To model this schema, our Dog and Owner tables are not enough. Since a dog can have multiple owners, we need to have multiple entries of the same dog id, matching to different </string>
    <string name="institute_name">Institute Name</string>
    <string name="job_location">Job Location</string>
    <string name="working_model">Working model</string>
    <string name="post_owner_details">Post Owner Details On your device, go to Settings and tap Developer Options</string>
    <string name="job_description">Job Description</string>
    <string name="role_name">Role Name</string>
    <string name="salary_range">Salary Range</string>
    <string name="employee_count">Employee Count</string>
    <string name="unfollow">Unfollow</string>
    <string name="ufollow">Unfollow</string>
    <string name="search">search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>